Add spring security jwt

--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,19 @@
             <version>8.0.17</version>
         </dependency>
 
+        <!--SECURITY-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
+        </dependency>
+        <!--SECURITY END-->
+
     </dependencies>
 
     <build>
