--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 ## H2 database
-#spring.datasource.url=jdbc:h2:mem:gallerydb/gallerydb
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=password
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:gallerydb/gallerydb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
 
 # Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://localhost:3306/gallerydb
-spring.datasource.username = root
-spring.datasource.password = admin
+#spring.datasource.url = jdbc:mysql://localhost:3306/gallerydb
+#spring.datasource.username = root
+#spring.datasource.password = admin
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
