Moved classes to correct packages, Roles id fix, removed comments/sql file, small fixes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,5 +28,7 @@ spring.servlet.multipart.max-file-size=200MB
 # Max Request Size
 spring.servlet.multipart.max-request-size=215MB
 
-jwt.secret=insoft;
+jwt.secret=insoft
+jwt.head=Authorization
+jwt.token=Bearer
 ## spring.security.user.password=password
